--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,28 +1,27 @@
 ﻿@page
 @model LoginModel
-
-@{
-    ViewData["Title"] = "Log in";
-}
-
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>@Localizer["Вход"]</h1>
+@{
+    ViewData["Title"] = @Localizer["Log in"];
+}
+
+<h1>@Localizer["Log in"]</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>@Localizer["Используйте локальную учетную запись для входа в систему"]</h4>
+                <h4>@Localizer["Use a local account to log in"]</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email">@Localizer["Почта:"]</label>
+                    <label asp-for="Input.Email">@Localizer["Email"]</label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password">@Localizer["Пароль:"]</label>
+                    <label asp-for="Input.Password">@Localizer["Password"]</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
@@ -35,17 +34,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">@Localizer["Авторизоваться"]</button>
+                    <button type="submit" class="btn btn-primary">@Localizer["Log in"]</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Забыли свой пароль?"]</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Forgot your password?"]</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["Зарегистрируйтесь как новый пользователь"]</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["Register as a new user"]</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@Localizer["Повторная отправка подтверждения по электронной почте"]</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@Localizer["Resending the confirmation email"]</a>
                     </p>
                 </div>
             </form>
@@ -53,7 +52,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>@Localizer["Используйте другую службу для входа в систему"]</h4>
+            <h4>@Localizer["Use another service to log in"]</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
